Fix counting of ULP and DISABLED_BY_PREF.

* Move counting of DISABLED_BY_PREF to the correct place.
* Count when translate is not used due to ULP using a new enum: LANGUAGE_IN_ULP.

BUG=701608

Review-Url: https://codereview.chromium.org/2757173002
Cr-Commit-Position: refs/heads/master@{#459687}